# ofxGgmlLlama

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HERMES.md  README.md  addon_config.mk  ofxggml-addon.json
.github/: copilot-instructions.md
.github/instructions/: ofxggml-ecosystem.instructions.md
.github/workflows/: addon-hygiene.yml  backend-runtime-check.yml  release-check.yml  release-gate.yml
docs/: ARCHITECTURE.md  CODEX_COPILOT_LOCAL_SERVER.md  LLAMA_WORKFLOWS.md  LOCAL_AGENT_ROUTING.md  MIGRATION.md  OPENCODE_LOCAL_SERVER.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_POLICY.md  ROADMAP.md  release-readiness-score.md
docs/releases/: v1.0.1.md  v1.0.2.md
example-text/src/: ofApp.cpp
ofxGgmlChatExample/: addons.make
ofxGgmlChatExample/src/: ofApp.cpp  ofApp.h
ofxGgmlEmbeddingExample/src/: ofApp.cpp  ofApp.h
ofxGgmlLlamaCodexLocalExample/: README.md  addons.make  codex-config.example.toml  codex-config.ollama.example.toml  hermes-config.example.yaml  local-agent-run.example.json  ollama-codex.Modelfile.example  opencode.example.json
ofxGgmlLlamaCodexLocalExample/codex-agents/: explorer.toml  local-explorer.toml  local-worker.toml  worker.toml
ofxGgmlLlamaCodexLocalExample/src/: main.cpp  ofApp.cpp  ofApp.h
ofxGgmlTextExample/src/: ofApp.cpp  ofApp.h
scripts/: build-chat-example.ps1  build-embedding-example.ps1  build-example.bat  build-example.ps1  build-example.sh  build-llama-server.bat  build-llama-server.ps1  build-llama-server.sh  build-simple-example.ps1  build-text-example.ps1  build-text-example.sh  check-local-agent-run.bat  check-local-agent-run.ps1  check-local-agent-run.sh  doctor-llama.bat  doctor-llama.ps1  doctor-llama.sh  doctor-ollama.bat  doctor-ollama.ps1  generate-release-readiness-score.ps1  generate-release-readiness-score.py  install-ollama.bat  install-ollama.ps1  list-models.bat  list-models.ps1  list-models.sh  ofxGgml-launch-utils.ps1  plan-local-codex.bat  plan-local-codex.ps1  plan-local-codex.sh  plan-local-opencode.bat  plan-local-opencode.ps1  plan-local-opencode.sh  release-candidate.bat  release-candidate.ps1  release-candidate.sh  run-chat-example.bat  run-chat-example.ps1  run-chat-example.sh  run-embedding-example.ps1  (+37 more)
scripts/dev/: build-chat-example.bat  build-chat-example.ps1  build-chat-example.sh  build-embedding-example.bat  build-simple-example.ps1  (+22 more)
src/: ofxGgmlEmbedding.h  ofxGgmlLlama.h  ofxGgmlLlamaVersion.h  ofxGgmlString.h  ofxGgmlText.h
tests/: CMakeLists.txt  test_codex_local_config.cpp  test_embedding_bridge.cpp  test_harness.h  test_llama_cli_text.cpp  test_llama_server_embedding.cpp  test_llama_server_text.cpp  test_main.cpp  test_ofxggml_string.cpp  test_umbrella.cpp
(+15 files in other folders)
